# MonovarNG

./: .gitignore  CMakeLists.txt  README.md
MonovarNG/: app.cpp  app.hpp  combination.cpp  combination.hpp  config.hpp  main.cpp  phred.cpp  phred.hpp  pileup.cpp  pileup.hpp  single_cell_pos.cpp  single_cell_pos.hpp  testing.cpp  testing.hpp  utility.cpp  utility.hpp  vcf.cpp  vcf.hpp  wrdouble.cpp  wrdouble.hpp
MonovarNG.xcodeproj/: project.pbxproj
MonovarNG.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MonovarNG.xcodeproj/project.xcworkspace/xcuserdata/tianyi.xcuserdatad/: UserInterfaceState.xcuserstate
MonovarNG.xcodeproj/xcuserdata/tianyi.xcuserdatad/xcschemes/: xcschememanagement.plist
MonovarNG/alglib/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  linalg.cpp  specialfunctions.cpp  statistics.cpp
Testing/Data/: filenames.txt
